[gd_scene load_steps=12 format=3 uid="uid://ce8kxqpeqvaav"]

[ext_resource type="PackedScene" uid="uid://byifbcpxlrxwm" path="res://scenes/user_interface.tscn" id="1_mvsqq"]
[ext_resource type="PackedScene" uid="uid://ckcwn6juyqo1m" path="res://scenes/ball.tscn" id="1_sg6v5"]
[ext_resource type="Script" path="res://source/main.gd" id="1_ukofa"]
[ext_resource type="PackedScene" uid="uid://c4848nh6ghtrx" path="res://scenes/wall.tscn" id="2_t4unw"]
[ext_resource type="PackedScene" uid="uid://kas8cxodfmum" path="res://scenes/player.tscn" id="3_fv76q"]
[ext_resource type="PackedScene" uid="uid://da6jbichdidkw" path="res://scenes/goal.tscn" id="5_cei5t"]
[ext_resource type="AudioStream" uid="uid://yhl4ikasf22r" path="res://music/background_music.mp3" id="7_3m7gi"]
[ext_resource type="AudioStream" uid="uid://cgictkggna504" path="res://music/game_start.mp3" id="7_a0ica"]
[ext_resource type="AudioStream" uid="uid://b3ffy2ahy6drt" path="res://music/win_sound.mp3" id="8_7eioc"]
[ext_resource type="Script" path="res://source/background_music.gd" id="9_bb5v3"]
[ext_resource type="Script" path="res://source/win_sound.gd" id="9_ygemy"]

[node name="Main" type="Node"]
script = ExtResource("1_ukofa")

[node name="World" type="Node2D" parent="."]

[node name="Background" type="ColorRect" parent="World"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1200.0
offset_bottom = 800.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.05, 0.05, 0.05, 1)

[node name="Player1" parent="World" instance=ExtResource("3_fv76q")]
position = Vector2(24, 352)

[node name="Player2" parent="World" instance=ExtResource("3_fv76q")]
position = Vector2(1176, 448)
rotation = 3.14159
player_number = 1

[node name="Ball" parent="World" instance=ExtResource("1_sg6v5")]
position = Vector2(588, 388)

[node name="UpperWall" parent="World" instance=ExtResource("2_t4unw")]
position = Vector2(0, -40)

[node name="LowerWall" parent="World" instance=ExtResource("2_t4unw")]
position = Vector2(0, 800)

[node name="Player1Goal" parent="World" instance=ExtResource("5_cei5t")]
position = Vector2(-56, 0)

[node name="Player2Goal" parent="World" instance=ExtResource("5_cei5t")]
position = Vector2(1192, 0)

[node name="UserInterface" parent="." instance=ExtResource("1_mvsqq")]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 2
grow_vertical = 2

[node name="StartSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_a0ica")

[node name="BackgroundMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_3m7gi")
volume_db = -10.0
parameters/looping = true
script = ExtResource("9_bb5v3")

[node name="WinSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_7eioc")
script = ExtResource("9_ygemy")

[connection signal="game_ended" from="." to="World/Player1" method="reset"]
[connection signal="game_ended" from="." to="World/Player2" method="reset"]
[connection signal="game_ended" from="." to="World/Ball" method="reset"]
[connection signal="game_ended" from="." to="WinSound" method="play_delayed"]
[connection signal="game_ended" from="." to="BackgroundMusic" method="stop"]
[connection signal="game_started" from="." to="UserInterface" method="show_ready_screen"]
[connection signal="game_started" from="." to="StartSound" method="play"]
[connection signal="game_started" from="." to="BackgroundMusic" method="play_delayed"]
[connection signal="player_won" from="." to="UserInterface" method="show_win_screen"]
[connection signal="round_ended" from="." to="World/Player1" method="reset"]
[connection signal="round_ended" from="." to="World/Player2" method="reset"]
[connection signal="round_ended" from="." to="World/Ball" method="reset"]
[connection signal="round_ended" from="." to="UserInterface" method="show_ready_screen"]
[connection signal="round_started" from="." to="World/Ball" method="start"]
[connection signal="round_started" from="." to="UserInterface" method="hide_screens"]
[connection signal="scores_updated" from="." to="UserInterface" method="update_score_board"]
[connection signal="body_entered" from="World/Player1Goal" to="." method="_on_player_2_scored"]
[connection signal="body_entered" from="World/Player2Goal" to="." method="_on_player_1_scored"]
